lesson 7 homework fixed line break on links

--- a/07LessonSeven/homework/css/style.css
+++ b/07LessonSeven/homework/css/style.css
@@ -58,5 +58,5 @@ article a{
   text-decoration: none;
   border: 2px solid #fff;
   padding: 10px;
-  margin-left: 285px;
+  float: right;
 }
